--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -77,9 +77,7 @@ $icon-font-path: '../fonts/';
 // end of initial code 
 body {
 }
-.bg1,
-.bg2 {
-    padding-top: 20px;
+.bg1{
   padding-bottom: 20px;
   min-height: 100vh;
 }
@@ -88,14 +86,38 @@ body {
   background-size: cover;
 }
 .bg2 {
+   padding-top: 20px;
+   min-height: 94vh;
+}
+.bg3 {
+  min-height: 6vh;
+  background: grey;
+  padding: 10px 0;
+  color: white;
+  a {
+    color: black;
+  }
+}
+.bg2, .bg3 {
   display: none;
 }
+.header {
+  padding-top: 20px;
+  padding-bottom: 3px;
+  h3 {
+    font-size: 33px;
+  }
+}
 .jumbotron {
-  margin-top: 15vh;
-  padding: 50px;
+  margin-top: 13vh;
+  padding: 75px;
   background-color: rgba(238, 238, 238, 0.71);
   h1 {
     font-size: 50px;
+    @media (max-width: 500px) {
+        font-size:35px;
+    }
   }
 }
+
 
